--- a/HaierOven/Cookbook/Views/SkillCell.xib
+++ b/HaierOven/Cookbook/Views/SkillCell.xib
@@ -21,8 +21,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技巧小贴士：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCU-J5-Yma">
-                        <rect key="frame" x="25" y="8" width="102" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技巧小贴士" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCU-J5-Yma">
+                        <rect key="frame" x="25" y="8" width="85" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="LEn-85-8kr"/>
                         </constraints>
@@ -48,6 +48,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这一次的面包，只采用了一次发酵，大大节省了操作时间，但是做出来的效果却好的惊人！通过叠放的方式，使得烤好的面包自然分层，进而达到拉丝的效果，入口还很柔软" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogP-wL-EAj">
                         <rect key="frame" x="25" y="36" width="278" height="60"/>
                         <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
