--- a/HaierOven/Cookbook/Views/OvenInfoCell.xib
+++ b/HaierOven/Cookbook/Views/OvenInfoCell.xib
@@ -8,13 +8,15 @@
         <mutableArray key="FZLTHJW.ttf">
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
+            <string>FZLTHJW--GB1-0</string>
+            <string>FZLTHJW--GB1-0</string>
         </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Oven info cell" id="KGk-i7-Jjw" customClass="OvenInfoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Oven info cell" rowHeight="67" id="KGk-i7-Jjw" customClass="OvenInfoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -22,15 +24,32 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="烤箱工具：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5nQ-4M-zOg">
                         <rect key="frame" x="25" y="14" width="60" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="sCn-T0-9sI"/>
+                            <constraint firstAttribute="height" constant="14" id="ymQ-CT-0Zx"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="海尔智能烤箱0007ERRNC型号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHH-EO-IVZ">
-                        <rect key="frame" x="93" y="11" width="172" height="21"/>
+                        <rect key="frame" x="93" y="14" width="172" height="14"/>
+                        <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="12"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="烤箱设置：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtq-AU-gZQ">
+                        <rect key="frame" x="25" y="38" width="60" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="tlX-dv-Sg7"/>
+                            <constraint firstAttribute="width" constant="60" id="VcD-8y-3bH"/>
+                            <constraint firstAttribute="height" constant="14" id="gt7-AR-5d6"/>
                         </constraints>
+                        <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="海尔智能烤箱0007ERRNC型号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fx4-1r-cyR">
+                        <rect key="frame" x="93" y="38" width="172" height="14"/>
                         <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -38,17 +57,22 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="5nQ-4M-zOg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="Msk-Lc-4y7"/>
-                    <constraint firstAttribute="centerY" secondItem="5nQ-4M-zOg" secondAttribute="centerY" id="btY-Ly-c3R"/>
-                    <constraint firstItem="yHH-EO-IVZ" firstAttribute="leading" secondItem="5nQ-4M-zOg" secondAttribute="trailing" constant="8" id="gHs-mo-MeX"/>
-                    <constraint firstItem="5nQ-4M-zOg" firstAttribute="centerY" secondItem="yHH-EO-IVZ" secondAttribute="centerY" constant="-0.5" id="iWu-Dt-MVj"/>
+                    <constraint firstItem="5nQ-4M-zOg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="EMa-7g-gs4"/>
+                    <constraint firstItem="yHH-EO-IVZ" firstAttribute="leading" secondItem="5nQ-4M-zOg" secondAttribute="trailing" constant="8" id="LWX-2z-iR6"/>
+                    <constraint firstItem="gtq-AU-gZQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="Yqv-RE-r6k"/>
+                    <constraint firstItem="5nQ-4M-zOg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="chH-T9-KPZ"/>
+                    <constraint firstItem="yHH-EO-IVZ" firstAttribute="centerY" secondItem="5nQ-4M-zOg" secondAttribute="centerY" id="ehb-Am-b98"/>
+                    <constraint firstAttribute="bottom" secondItem="gtq-AU-gZQ" secondAttribute="bottom" constant="14.5" id="hCL-lZ-AzZ"/>
+                    <constraint firstItem="fx4-1r-cyR" firstAttribute="centerY" secondItem="gtq-AU-gZQ" secondAttribute="centerY" constant="0.5" id="kB7-vl-gYE"/>
+                    <constraint firstItem="fx4-1r-cyR" firstAttribute="leading" secondItem="gtq-AU-gZQ" secondAttribute="trailing" constant="8" id="vve-4L-Zlr"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="ovenInfoLabel" destination="yHH-EO-IVZ" id="WR2-vc-MTt"/>
+                <outlet property="ovenSettingLabel" destination="fx4-1r-cyR" id="UFr-uN-sA5"/>
             </connections>
-            <point key="canvasLocation" x="208" y="340"/>
+            <point key="canvasLocation" x="208" y="351.5"/>
         </tableViewCell>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
