--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qb9-bz-vmv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2Vb-MN-7O4">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -362,6 +362,45 @@
             </objects>
             <point key="canvasLocation" x="-2027" y="-248"/>
         </scene>
+        <!--Start Animation Controller-->
+        <scene sceneID="c1I-kZ-Hsu">
+            <objects>
+                <viewController id="2Vb-MN-7O4" customClass="StartAnimationController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xr1-AR-Yi0"/>
+                        <viewControllerLayoutGuide type="bottom" id="y62-lq-IQc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vyT-l4-U76">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ACT_back.png" translatesAutoresizingMaskIntoConstraints="NO" id="tPx-4U-l91">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo1.png" translatesAutoresizingMaskIntoConstraints="NO" id="nZ4-Bg-7Yu">
+                                <rect key="frame" x="129" y="100" width="62" height="66"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_down.png" translatesAutoresizingMaskIntoConstraints="NO" id="n4t-vI-Qkn">
+                                <rect key="frame" x="98" y="174" width="125" height="47"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="y62-lq-IQc" firstAttribute="top" secondItem="tPx-4U-l91" secondAttribute="bottom" id="2Z2-ec-9CH"/>
+                            <constraint firstAttribute="trailing" secondItem="tPx-4U-l91" secondAttribute="trailing" id="A31-Vr-4x0"/>
+                            <constraint firstItem="n4t-vI-Qkn" firstAttribute="centerX" secondItem="tPx-4U-l91" secondAttribute="centerX" constant="0.5" id="JMu-z7-O2m"/>
+                            <constraint firstAttribute="centerY" secondItem="nZ4-Bg-7Yu" secondAttribute="centerY" constant="151" id="Jgj-ou-XpH"/>
+                            <constraint firstItem="tPx-4U-l91" firstAttribute="top" secondItem="vyT-l4-U76" secondAttribute="top" id="Qgo-nx-dcE"/>
+                            <constraint firstAttribute="centerY" secondItem="n4t-vI-Qkn" secondAttribute="centerY" constant="86.5" id="V1y-1h-8OQ"/>
+                            <constraint firstItem="tPx-4U-l91" firstAttribute="leading" secondItem="vyT-l4-U76" secondAttribute="leading" id="djg-vB-lkl"/>
+                            <constraint firstItem="tPx-4U-l91" firstAttribute="centerX" secondItem="nZ4-Bg-7Yu" secondAttribute="centerX" id="xKS-pm-Khr"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yft-tP-4eE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1304" y="-1858"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="hlK-rZ-zQt">
             <objects>
@@ -401,7 +440,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FXA-dy-Lur" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1338" y="-1170"/>
+            <point key="canvasLocation" x="-812" y="-1132"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="9ig-j2-IkF">
@@ -2481,7 +2520,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="cki-2l-gmw">
-                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
+                            <rect key="frame" x="96" y="6" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNV-Te-TwH">
@@ -6827,6 +6866,7 @@
         <image name=" " width="26" height="26"/>
         <image name="1-2.png" width="97" height="31"/>
         <image name="2-1.png" width="96" height="31"/>
+        <image name="ACT_back.png" width="241" height="426"/>
         <image name="CGX.png" width="32" height="32"/>
         <image name="CGXDJ.png" width="32" height="32"/>
         <image name="UP_p.png" width="26" height="26"/>
@@ -6863,6 +6903,8 @@
         <image name="l2.png" width="720" height="1"/>
         <image name="left.png" width="88" height="5"/>
         <image name="liebieo.png" width="26" height="26"/>
+        <image name="logo1.png" width="62" height="66"/>
+        <image name="logo_down.png" width="125" height="47"/>
         <image name="lx-ybx.png" width="360" height="25"/>
         <image name="message.png" width="26" height="26"/>
         <image name="mj.png" width="160" height="97"/>
