--- a/HaierOven/SearchView.xib
+++ b/HaierOven/SearchView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -95,6 +95,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="cancelbtn" destination="hqs-f3-seY" id="hoI-aO-CgY"/>
+                <outlet property="confirmOrCancelButton" destination="EUn-se-D6N" id="yk7-1D-rYY"/>
                 <outlet property="searchTextFailed" destination="rfz-cM-A8d" id="9VG-z3-bPF"/>
             </connections>
             <point key="canvasLocation" x="246" y="477.5"/>
